DOCS: Actualizar README se scripts